fix(sensor): get file uri from classloader instead of a relative path